@@ -1,5 +1,6 @@
 package com.example.frontrest.config;
 
+import com.example.frontrest.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -7,83 +8,117 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import jakarta.servlet.http.HttpServletResponse;
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-
+    
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+    }
+    
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http
             // Désactiver CSRF pour l'API REST
             .csrf(csrf -> csrf.disable())
             
-            // Activer CORS
+            // CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
+            
             // Configuration des autorisations
             .authorizeHttpRequests(auth -> auth
                 // Endpoints publics
                 .requestMatchers(
-                        "/api/auth/**",
-                        "/api/categories/**",
-                        "/api/catalog/**",
-                        "/api/basket/**",
-                        "/api/products/**",
-                        "/error"
+                    "/",
+                    "/api/auth/**",
+                    "/api/categories/**",
+                    "/api/catalog/**",
+                    "/api/products/**",
+                    "/api/health/**",
+                    "/css/**",
+                    "/js/**",
+                    "/images/**",
+                    "/error"
                 ).permitAll()
-
+                
+                // Endpoints semi-publics (basket peut être anonyme ou authentifié)
+                .requestMatchers("/api/basket/**").permitAll()
+                
                 // Endpoints privés
                 .requestMatchers("/api/profile/**").authenticated()
-
-                // Tout le reste est permis par défaut
-                .anyRequest().permitAll()
+                .requestMatchers("/api/checkout/**").authenticated()
+                
+                // Tout le reste
+                .anyRequest().authenticated()
             )
-
-            // Configuration de la gestion des sessions (stateless pour API REST)
+            
+            // Sessions STATELESS pour JWT
             .sessionManagement(session -> session
-                    .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
-
-            // Désactiver les formulaires de login et basic auth
+            
+            // Désactiver le formulaire de login
             .formLogin(form -> form.disable())
-            .httpBasic(basic -> basic.disable());
-
+            .httpBasic(basic -> basic.disable())
+            
+            // Gestion des erreurs d'authentification
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint((request, response, authException) -> {
+                    System.out.println("Authentication failed: " + authException.getMessage());
+                    response.setContentType("application/json");
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"" + authException.getMessage() + "\"}");
+                })
+            )
+            
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        
         return http.build();
     }
-
+    
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("*"));
+        
+        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
+        
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Content-Disposition"
+        ));
+        
+        configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration);
+        
         return source;
     }
-
+    
     @Bean
     public AuthenticationManager authenticationManager(
             AuthenticationConfiguration configuration) throws Exception {
         return configuration.getAuthenticationManager();
     }
     
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+   
 }
